test_suite/ill_formed/invalid_detup_lhs.mnl
fun main: [] => {
    detup [a, b] = [1, 2, 3]

    return 0
}